# pypi-simple-server

./: .env  .gitignore  .pre-commit-config.yaml  prek.toml  pyproject.toml
src/pypi_simple_server/: __main__.py  auth.py  config.py  database.py  dist_scanner.py  endpoint_utils.py  files_dir.py  loader.py  main.py  models.py  requests.py  responses.py  static_files_gen.py  uploader.py
src/pypi_simple_server/templates/: __init__.py  detail.html  index.html  simple_detail.html  web_index.html  web_project.html
tests/: conftest.py  support.py  test_cli.py  test_conditional_requests.py  test_content_negotiation.py  test_database.py  test_files_dir.py  test_other_api.py  test_server.py  test_simple_html.py  test_simple_json.py  test_static_files_gen.py  test_uploader.py
